--- a/css/styles.css
+++ b/css/styles.css
@@ -6,3 +6,10 @@ body{
     color: #262626;
     margin: 5% 0;
   }
+  .container{
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+  }
