--- a/css/styles.css
+++ b/css/styles.css
@@ -27,3 +27,17 @@ body{
   .Yorder{
     flex: 2;
   }
+  .title{
+    background: -webkit-gradient(linear, left top, right bottom, color-stop(0, #5195A8), color-stop(100, #70EAFF));
+    border-radius:10px 10px 0 0 ;
+    padding: 20px;
+    color: #f6f6f6;
+  }
+  .text-center{
+    font-family: serif; 
+  }
+  .h2{
+    font-family: serif;
+  }
+  .required{
+    color: red;
