--- a/css/styles.css
+++ b/css/styles.css
@@ -51,3 +51,13 @@ body{
     width: 25%;
     margin-top: 12px;
     padding-right: 10px;
+  }
+  input[type="text"], input[type="tel"], input[type="email"], select
+{
+  width: 70%;
+  height: 30px;
+  padding: 5px 10px;
+  margin-bottom: 10px;
+  border: 1px solid #dadada;
+  color: rgb(79, 210, 243);
+}
