add changes to the contact form

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700");
 
 body{
-    background: url('http://all4desktop.com/data_images/original/4236532-background-images.jpg');
+    background: url("../img/77.jpg");
     font-family: 'Roboto Condensed', sans-serif;
     color: #262626;
     margin: 5% 0;
