--- a/Marah-css/styles.css
+++ b/Marah-css/styles.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700");
 
 body{
-    background: url("../img/77.jpg");
+    background: url("../images/888.jpg");
     font-family: 'Roboto Condensed', sans-serif;
     color: #262626;
     margin: 5% 0;
@@ -110,6 +110,6 @@ button{
     color: #fff;
     font-size: 15px;
     font-weight: bold;
-    leng
+    
   }
   
