--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,4 @@
 
-
-
-
-
 html,body,header,
 .landing {
   overflow-x: hidden;
@@ -124,7 +120,12 @@ h1 {
   #galley{
     padding-top: 30px;
     text-align: center;
-    background-image: url("../images/.jpg");
+    font-size: 35px;
+    
+    font-family:Comic Sans MS;
+    text-shadow:3px 2px 3px green;
+    color: darkred;
+    text-align: center;
   }
 
 
@@ -135,4 +136,75 @@ h1 {
   .text h5{
     font-size: 20px;
     padding: 20px;
+  }
+  #about{
+    background-image: url("../images/about.png");
+    height: 100%;
+    width: 150%;
+    background-repeat: no-repeat;
+      margin-top: 50px;
+      padding-top: 80px;
+      text-align: center;
+    justify-content: center; 
+    background-position: top;
+    background-color: wheat;
+    margin-left: 30px;
+   padding-left: 2%;
+   padding-right: 2%;
+    padding-bottom: 10px;
+    
+  }
+  #about p{
+    font-size: 18px;
+  }
+
+  
+  #about h3{
+      font-size: 35px;
+      font-weight: bold;
+      font-family:Comic Sans MS;
+      text-shadow:3px 2px 3px green;
+      color: darkred;
+      text-align: center;
+  }
+  
+
+  #services p{
+    font-size: 18px;
+    font-family: 'Times New Roman';
+}
+#services{
+  background-color: wheat;
+  height: 100%;
+  width: 150%;
+  justify-content: center;
+  text-align: center;
+  margin-top: 50px;
+padding-top: 20px;
+margin-left: 30px;
+padding-left:2% ;
+padding-right: 2%;
+padding-bottom: 5%;
+
+
+}
+#services h3{
+  font-size: 35px;
+  font-weight: bold;
+  font-family:Comic Sans MS;
+  text-shadow:3px 2px 3px green;
+  color: darkred;
+  text-align: center;
+}
+  .dropdown-content a {
+    float: none;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+  }
+
+  .dropdown {
+    float: left;
+    overflow: hidden;
   }
